_sass/_main.sass
@charset "utf-8"
@import "highlight"

/* SIZE DEFINITIONS */
$website-size: 800px // width of content of the website
$website-padding: 25px // left/right padding of website content
$header-padding: 10px // top/bottom padding of header
$navigation-padding: 20px // top/bottom padding of navbar
$navigation-item-spacing: 20px // spacing between each of the navigation items
$code-padding: 6px // padding for inline code, half padding for block code
$code-border-roundness: 10px // roundness of the code border
$table-cell-spacing: 10px // default cell spacing for tables

/* relative sizes of certain website elements */
$title-size: 350%
$post-date-size: 115%
$small-size: 90%

/* text formatting */
$line-spacing: 20px // spacing after paragraph
$h1-spacing: 12px // spacing after h1
$h2-spacing: 10px // spacing after h2
$h3-spacing: 8px // spacing after h3
$item-padding: 25px // list and blockquote padding

/* COLOR DEFINITIONS */
$text-color: #000 // text colors
$quote-color: #606060
$link-color: #03d

/* Dark mode colors */
$text-color-dark: #fff
$link-color-dark: rgb(71, 154, 255)
$blockquote-color-dark: rgb(171, 164, 153)
$border-color-dark: rgb(106, 99, 87)
$background-dark: #181a1b
$background-light-dark: rgb(24, 26, 27)
$background-lighter-dark: rgb(43, 46, 48)

$code-background-color: #f2f2f2 // background colors

/* FONT SETTINGS */
$serif-font: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
$monospaced-font: "Roboto Mono"

@font-face
  font-family: $monospaced-font
  src: local($monospaced-font), url("/assets/css/fonts/RobotoMono-Regular.ttf") format("truetype")
  font-weight: normal
  font-style: normal

/* WEBSITE-WIDE SETTINGS */
*
  margin: 0
  padding: 0

// content (including navigation) formatting
.content
  max-width: $website-size
  margin: auto

  // side padding
  padding-left: $website-padding
  padding-right: $website-padding
  padding-bottom: $website-padding

// navigation bar formatting
.navigation
  padding: 0 $navigation-padding $navigation-padding $navigation-padding
  text-align: center

  // separator character + spacing
  .navigation-separator
    margin-left: $navigation-item-spacing / 2
    margin-right: $navigation-item-spacing / 2

    &:before
      content: "•"

// a simple, 2 column table without a header
.alignment-table
  td
    padding-right: $table-cell-spacing

// wiki-like table class
.wiki-table
  float: right

  // cell spacing
  padding: $table-cell-spacing / 2
  margin: $table-cell-spacing / 2

  // italics for the first column
  tr
    td:first-of-type
      font-style: italic

  // image formatting
  td
    vertical-align: bottom

  img
    max-width: $website-size * 0.2

  // centering for smaller screens
  @media (max-width: 500px)
    float: none
    margin-left: auto
    margin-right: auto
    margin-bottom: $line-spacing

// 404 formatting
.not-found
  p, h1
    text-align: center

// highlight the currently selected page
.current-page-item
  font-weight: bold

// header formatting
.header
  h1
    padding: $header-padding $website-padding 0 $website-padding
    text-align: center
    display: block
    font-size: $title-size
    font-family: $serif-font

// post header formatting
.post-header
  h2
    padding-bottom: 0

  p
    font-size: $post-date-size
    font-style: italic

.highlighter-rouge
  pre
    overflow-x: auto
    padding: $code-padding

    border-radius: $code-border-roundness
    padding: ($code-padding / 2) $code-padding
    margin-bottom: $line-spacing

// useful CSS classes
.small
  font-size: $small-size

.centered
  text-align: center

body
  // text formatting
  font-family: $serif-font
  line-height: 1.5

  table
    margin-bottom: $line-spacing

  figcaption
    text-align: center

  // list formatting
  ul, ol
    padding-left: $item-padding
    margin-bottom: $line-spacing

  ul ul, ol ul
    margin: 0
    margin-bottom: 0

  // a fix for (arguably) incorrectly Jekyll-generated list code
  li
    p
      margin: 0

  // remove spacing between a paragraph followed by a list
  p + ul, p + ol
    margin-top: -$line-spacing

  // no link decoration (only color)
  a
    text-decoration: none

  // text spacing
  p, hr
    margin-bottom: $line-spacing

  h1
    padding-bottom: $h1-spacing

  h2
    padding-bottom: $h2-spacing

  h3
    padding-bottom: $h3-spacing

  // image formatting
  img
    width: 90%
    display: block
    margin-left: auto
    margin-right: auto

  // quote formatting
  blockquote
    font-style: italic
    padding-left: $item-padding
    border-width: 0 0 0 3px
    border-style: dashed
    border-color: lighten($quote-color, 25%)

  // horizontal rule formatting (fade from sides)
  hr
    // so floats don't intercept the horizontal rule
    clear: both
    border: 0 !important
    height: 2px
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0))

  // code formatting
  code
    font-family: $monospaced-font, monospace

    // reduced tab size to 4
    tab-size: 4
    -moz-tab-size: 4

  footer
    p, address
      font-size: $small-size
      text-align: center
      margin-bottom: 0

/* SPOILER */
.spoiler:not(:hover), .spoiler:not(:hover) *
  color: #B0C4DE
  background-color: #B0C4DE

.spoiler:not(:hover) *
  background: transparent

/* TABLE */
table
  font-family: verdana,arial,sans-serif
  color: #333333
  border-width: 1px
  border-color: #666666
  border-collapse: collapse
  padding: 3em
  margin: 0

th
  border-width: 1px
  padding: 8px
  border-style: solid
  border-color: #666666
  background-color: #dedede

td
  border-width: 1px
  padding: 8px
  border-style: solid
  border-color: #666666
  background-color: #ffffff

/* COLOR THEME SETTINGS */
body
  color: $text-color

  a
    color: $link-color

    &:hover
      color: $text-color

  blockquote
    color: $quote-color

  .current-page-item, .header
    a, h1
      color: $text-color

  .highlight, .highlighter-rouge
    background-color: $code-background-color
    border-color: $code-background-color

/* Footer styling */
.related
  display: flex
  flex-wrap: wrap
  justify-content: space-between
  align-items: center
  padding-bottom: 20px

.related span
  display: block

.related a
  font-size: 1.2em
  font-weight: bold

.next
  text-align: right

@media print
  header, footer
    display: none

@media (prefers-color-scheme: dark)
  body
    background: $background-dark
  body, .current-page-item a, .header a h1, h1
    color: $text-color-dark !important
  a
    color: $link-color-dark !important
  td
    border-color: $border-color-dark
    background-color: $background-light-dark
  table
    color: $text-color-dark
  th
    border-color: $border-color-dark
    background-color: $background-lighter-dark
  blockquote
    color: $blockquote-color-dark
  .invertable
    filter: invert(.8)
  body hr
    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0))

